--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "prod": "node --max-old-space-size=4096 ./node_modules/@angular/cli/bin/ng build --prod"
   },
   "eslintConfig": {
     "extends": [
