--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
-    "predeploy": "npm run build",
-    "prod": "node --max-old-space-size=4096 ./node_modules/@angular/cli/bin/ng build --prod"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
