--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
-    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2021.1.4859.tar.gz",
     "microsoft-cognitiveservices-speech-sdk": "^1.15.1",
     "react": "^17.0.1",
     "react-animate-height": "^2.0.23",
@@ -20,8 +19,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "node --max_old_space_size=2560 node_modules/.bin/react-scripts start",
-    "build": "node --max_old_space_size=2560 node_modules/.bin/react-scripts build",
+    "start": "node start",
+    "build": "node build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
