--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "web-vitals": "^1.1.0"
   },
   "scripts": {
-    "start": "node start",
-    "build": "node build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
