--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.0",
     "axios": "^0.21.1",
+    "daypilot-pro-react": "https://npm.daypilot.org/daypilot-pro-react/trial/2021.1.4859.tar.gz",
     "microsoft-cognitiveservices-speech-sdk": "^1.15.1",
     "react": "^17.0.1",
     "react-animate-height": "^2.0.23",
